# collateral-token

./: Anchor.toml  BLOOMBERG_TERMINAL_GUIDE.md  BUILD_SUMMARY.md  CHARACTER_APPRAISAL.md  DEPLOY.md  DESIGN.md  IMPLEMENTATION.md  LANGUAGE_FI_SUMMARY.md  README.md  README_DASHBOARD.md  collateral_proof.json  collateral_verifier.py  deploy.py
.github/workflows/: ci.yml  solana-devnet.yml
programs/collateral_usd/: Cargo.toml
programs/collateral_usd/src/: lib.rs
security/: VULNERABILITY_REPORT.md  VULNERABILITY_RESPONSE.md
web/: QUICKSTART.md  README.md  globals.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: layout.tsx  page.tsx
web/components/: asset-breakdown.tsx  header.tsx  language-fi-oracle.tsx  merkle-verification.tsx  portfolio-overview.tsx  token-mechanics.tsx
web/lib/: character-appraisal.ts
