[package]
name = "collateral_usd"
version = "0.1.0"
description = "Collateral-backed USD token on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_usd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
